tests/ui/const-generics/lifetime-in-const-param.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/lifetime-in-const-param.rs:5:23
   |
LL | struct S<'a, const N: S2>(&'a ());
   |                       ^^ expected named lifetime parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
